--- a/style/Style.css
+++ b/style/Style.css
@@ -11,8 +11,8 @@ h1{
 
 .listing{
     text-align: left;
-    padding-left: 300px;
-    word-spacing: 2px;
+    padding-left: 100px;
+    word-spacing: 3px;
 }
 
 .listing li{
@@ -55,6 +55,49 @@ h1{
 #inside{
     background-color: red;
 }
+
+
+.SubmitBtn{
+    background-color: rgb(121, 121, 223); /* Green */
+    border: none;
+    color:whitesmoke;
+    padding: 5px 10px;
+    text-align: center;
+    text-decoration: none;
+    
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    
+    transition-duration: 0.4s;
+}
+
+.MenuBtn{
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color:whitesmoke;
+    padding: 5px 3px;
+    text-align: center;
+    text-decoration: none;
+    
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    
+    transition-duration: 0.4s;
+}
+
+a{
+    color:whitesmoke;
+    font-size: medium;
+    text-decoration: none;
+}
+
+button:hover {
+   
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+  }
+
 marquee{
     margin-top: 50px;
 }
