[Pranav]Added: Styling update for responsive design

--- a/style/Style.css
+++ b/style/Style.css
@@ -1,30 +1,49 @@
 body{
     background-color:dodgerblue;
+    justify-content: center;
 }
 
 h1{
-    margin: 20px 25px 0px 500px;
+    margin: 50px auto auto auto;
     font-family: cursive;
     font-size: xx-large;
     color: gold;
+    display: flex;
+    justify-content: center;
 }
 
 .listing{
+    padding: 10px;
+    display: flex;
+    justify-content: center;
     text-align: left;
-    padding-left: 300px;
+    margin: 10px auto 10px auto;
+    
+    width: 80%;
     word-spacing: 3px;
+    
 }
 
-.listing li{
+.listing ol{
    font-style: italic;
+   margin: 1px 150px 1px 150px;
+   
+   
+}
+li{
+    padding-top: 5px;
 }
 
 .mainContainer{
     background-color: aliceblue;
-    
-    margin: 50px 100px 0px 100px;
 
-    padding: 10px 100px 100px 100px;
+    width: 80%;
+
+   
+    
+    margin: 60px auto 60px auto;
+
+    padding: 10px 2px 100px 2px;
 
     text-align: center;
 
@@ -37,6 +56,7 @@ h1{
 
 .mainContainer input{
     margin-top: 10px;
+    padding: 4px;
 }
 
 .mainContainer button{
