--- a/style/indexStyling.css
+++ b/style/indexStyling.css
@@ -4,7 +4,9 @@ body{
 }
 
 h1{
-    margin: 50px 25px 0px 500px;
+    display: flex;
+    justify-content: center;
+    margin: 50px auto auto auto;
     font-family: cursive;
     font-size: xx-large;
     color: gold;
@@ -12,107 +14,49 @@ h1{
 
 
 
+
 .mainContainer{
+ 
+    
+    
     background-color: aliceblue;
-    
-    margin: 50px 100px 0px 100px;
 
-    padding: 10px 100px 100px 100px;
+    width: 80%;
+
+    margin: 60px auto 60px auto;
+
+   
+    padding: 25px;
 
     text-align: center;
 
     
 }
 
-.btn1{
+.butonLayout{
+    
+    margin:  10px auto 10px auto;
+   width: 90%;
+   
+   
+    
+}
+
+button{
     background-color: #4CAF50; /* Green */
     border: none;
    
-    padding: 15px 110px;
-    text-align: center;
+    padding: 15px 10px ;
+    justify-content: center;
     text-decoration: none;
     
     font-size: 16px;
-    margin: 5px 2px;
+    margin: 5px auto 5px auto;
     cursor: pointer;
     
     transition-duration: 0.4s;
 }
 
-.btn2{
-    background-color: #4CAF50; /* Green */
-    border: none;
-   
-    padding: 15px 110px;
-    text-align: center;
-    text-decoration: none;
-    
-    font-size: 16px;
-    margin: 5px 5px;
-    cursor: pointer;
-    
-    transition-duration: 0.4s;
-}
-
-.btn3{
-    background-color: #4CAF50; /* Green */
-    border: none;
-   
-    padding: 15px 110px;
-    text-align: center;
-    text-decoration: none;
-    
-    font-size: 16px;
-    margin: 5px 5px;
-    cursor: pointer;
-    
-    transition-duration: 0.4s;
-}
-
-.btn4{
-    background-color: #4CAF50; /* Green */
-    border: none;
-   
-    padding: 15px 110px;
-    text-align: center;
-    text-decoration: none;
-    
-    font-size: 16px;
-    margin: 5px 5px;
-    cursor: pointer;
-    
-    transition-duration: 0.4s;
-}
-
-.btn5{
-    background-color: #4CAF50; /* Green */
-    border: none;
-   
-    padding: 15px 110px;
-    text-align: center;
-    text-decoration: none;
-    
-    font-size: 16px;
-    margin: 5px 5px;
-    cursor: pointer;
-    
-    transition-duration: 0.4s;
-}
-
-.btn6{
-    background-color: #4CAF50; /* Green */
-    border: none;
-   
-    padding: 15px 110px;
-    text-align: center;
-    text-decoration: none;
-    
-    font-size: 16px;
-    margin: 5px 5px;
-    cursor: pointer;
-    
-    transition-duration: 0.4s;
-}
 
 a{
     color:whitesmoke;
